[gd_scene load_steps=2 format=3 uid="uid://cnpfxfhrftrkl"]

[ext_resource type="Script" uid="uid://dbgpc7hjwp0fn" path="res://scene/game/upgrade/upgrade.gd" id="1_k1jgu"]

[node name="Upgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1jgu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Back"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "coins"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="UpgradeHP" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Upgrade HP"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/UpgradeHP"]
layout_mode = 1
offset_right = 79.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 26
text = "HP: 30"

[node name="UpgradeDamage" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Upgrade Damage"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/UpgradeDamage"]
layout_mode = 1
offset_right = 87.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 26
text = "DB: 30"

[node name="UpgradeBoostTime" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Upgrade Boost Time"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/UpgradeBoostTime"]
layout_mode = 1
offset_right = 75.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 26
text = "BT: 30"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/UpgradeHP" to="." method="upgrade_hp"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/UpgradeDamage" to="." method="upgrade_damage"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/UpgradeBoostTime" to="." method="upgrade_boost_time"]
